--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,7 @@ AllCops:
     - 'script/**/*'
     - 'node_modules/**/*'
     - 'bin/**/*'
+    - 'spec/cypress/fixtures/**/*'
   TargetRubyVersion: 2.7.1
 
 Rails:
