--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: test fail
-        run: faefjaeifojesfo
+        run: faefjaeifojesfos
 
       - name: Run docker-compose
         run: docker-compose up -d
