--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -29,11 +29,11 @@ jobs:
         run: docker-compose exec -T app yarn check:database-consistency:test
 
       - name: Notify slack fail
-        if: failure()
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_NOTIFICATIONS_BOT_TOKEN }}
-        uses: voxmedia/github-action-slack-notify-build@v1
-        with:
-          channel_id: C04L8DV07CH
-          status: FAILED
-          color: danger
+        steps:
+          - uses: 8398a7/action-slack@v3
+            with:
+              status: ${{ job.status }}
+              fields: repo,message,commit,author,action,eventName,ref,workflow,job,took,pullRequest # selectable (default: repo,message)
+            env:
+              SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL_ERRORS }} # required
+            if: failure() # Pick up events even if the job fails or is canceled.
